card overlap corrected, bottom padding added

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
   padding-left: 5%;
   padding-right: 5%;
   padding-top: 2.5%;
+  padding-bottom: 2.5%;
 }
 
 .card-text{
